feat: crud create and simple control investments
