# docs/swagger.yaml
@@ -46,6 +46,16 @@ definitions:
         example: "2025-01-01T00:00:00Z"
         type: string
     type: object
+  github_com_vkunssec_contabius_pkg_domain.Currency:
+    enum:
+    - BRL
+    - USD
+    - EUR
+    type: string
+    x-enum-varnames:
+    - CurrencyBRL
+    - CurrencyUSD
+    - CurrencyEUR
   github_com_vkunssec_contabius_pkg_domain.Investment:
     properties:
       id:
@@ -143,6 +153,46 @@ definitions:
     - InvestmentTypeBDR
     - InvestmentTypeCOE
     - InvestmentTypeOther
+  github_com_vkunssec_contabius_pkg_domain.Investments:
+    properties:
+      account:
+        allOf:
+        - $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Accounts'
+        description: Conta do usuário
+      amount:
+        allOf:
+        - $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Money'
+        description: Valor do investimento
+      created_at:
+        description: Data de criação do investimento
+        example: "2025-01-01T00:00:00Z"
+        type: string
+      description:
+        description: Descrição do investimento
+        example: Investimento em CDB
+        type: string
+      id:
+        description: ID do investimento
+        example: 678079f6f5080a39a8eedc1e
+        type: string
+      investment:
+        allOf:
+        - $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Investment'
+        description: Tipo de investimento
+      recurrence:
+        allOf:
+        - $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Recurrence'
+        description: Recurrence do investimento
+        example: monthly
+      recurrence_day:
+        description: Dia da recorrência
+        example: 1
+        type: integer
+      updated_at:
+        description: Data de atualização do investimento
+        example: "2025-01-01T00:00:00Z"
+        type: string
+    type: object
   github_com_vkunssec_contabius_pkg_domain.Method:
     enum:
     - credit
@@ -184,6 +234,31 @@ definitions:
         description: Método de pagamento
         example: credit
     type: object
+  github_com_vkunssec_contabius_pkg_domain.Money:
+    properties:
+      currency:
+        allOf:
+        - $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Currency'
+        description: default code BRL
+        example: BRL
+      quantity:
+        example: 1000
+        type: integer
+    type: object
+  github_com_vkunssec_contabius_pkg_domain.Recurrence:
+    enum:
+    - monthly
+    - yearly
+    - sporadic
+    type: string
+    x-enum-comments:
+      RecurrenceMonthly: Mensal
+      RecurrenceSporadic: Esporádico
+      RecurrenceYearly: Anual
+    x-enum-varnames:
+    - RecurrenceMonthly
+    - RecurrenceYearly
+    - RecurrenceSporadic
   github_com_vkunssec_contabius_pkg_domain_common.BadRequest:
     description: Estrutura padrão de resposta de erro de requisição
     properties:
@@ -240,11 +315,6 @@ definitions:
     type: object
   pkg_handlers_investment.GetInvestmentsResponse:
     properties:
-      investments:
-        description: Dados dos investimentos
-        items:
-          $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Investment'
-        type: array
       message:
         description: Mensagem de sucesso ou erro
         example: Investimentos retornados com sucesso
@@ -253,6 +323,11 @@ definitions:
         description: Sucesso da operação
         example: true
         type: boolean
+      types:
+        description: Dados dos investimentos
+        items:
+          $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Investment'
+        type: array
     type: object
   pkg_handlers_methods.GetMethodsResponse:
     properties:
@@ -565,6 +640,165 @@ paths:
       summary: Rota para atualizar uma categoria
       tags:
       - Category
+  /investment/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Rota para atualizar um investimento
+      parameters:
+      - description: Token Bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Dados do investimento
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Investments'
+      - description: ID do investimento
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.BadRequest'
+      security:
+      - ApiKeyAuth: []
+      summary: Rota para atualizar um investimento
+      tags:
+      - Investments
+  /investments:
+    get:
+      consumes:
+      - application/json
+      description: Rota para retornar os investimentos
+      parameters:
+      - description: Token Bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - collectionFormat: csv
+        description: Ids dos investimentos a serem retornados
+        example:
+        - 0
+        - 1
+        - 2
+        - 3
+        in: query
+        items:
+          enum:
+          - 0
+          - 1
+          - 2
+          - 3
+          - 4
+          - 5
+          - 6
+          - 7
+          - 8
+          - 9
+          - 10
+          - 11
+          - 12
+          - 13
+          - 14
+          type: integer
+        name: ids
+        type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Investments'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.BadRequest'
+      security:
+      - ApiKeyAuth: []
+      summary: Rota para retornar os investimentos
+      tags:
+      - Investments
+    post:
+      consumes:
+      - application/json
+      description: Rota para criar um investimento
+      parameters:
+      - description: Token Bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Dados do investimento
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain.Investments'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.BadRequest'
+      security:
+      - ApiKeyAuth: []
+      summary: Rota para criar um investimento
+      tags:
+      - Investments
+  /investments/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Rota para deletar um investimento
+      parameters:
+      - description: Token Bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ID do investimento
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_vkunssec_contabius_pkg_domain_common.BadRequest'
+      security:
+      - ApiKeyAuth: []
+      summary: Rota para deletar um investimento
+      tags:
+      - Investments
   /investments/get_types:
     get:
       consumes:
