# pkg/handlers/investment/delete.go
@@ -13,20 +13,20 @@ type deleteParams struct {
 	Id string `params:"id" example:"678079f6f5080a39a8eedc1e"` // ID da conta bancária a ser deletada
 }
 
-// DeleteAccount é uma função que deleta uma conta bancária
-// @Summary Rota para deletar uma conta bancária
-// @Description Rota para deletar uma conta bancária
-// @Tags Account
+// DeleteInvestment é uma função que deleta um investimento
+// @Summary Rota para deletar um investimento
+// @Description Rota para deletar um investimento
+// @Tags Investments
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
 // @Param Authorization header string true "Token Bearer"
-// @Param id path string true "ID da conta bancária"
+// @Param id path string true "ID do investimento"
 // @Success 200 {object} common.Response
 // @Failure 400 {object} common.BadRequest
 // @Failure 404 {object} common.BadRequest
-// @Router /account/delete/{id} [delete]
-func DeleteAccount(ctx *fiber.Ctx) error {
+// @Router /investments/delete/{id} [delete]
+func DeleteInvestment(ctx *fiber.Ctx) error {
 	params := new(deleteParams)
 	if err := ctx.ParamsParser(params); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(common.BadRequest{
@@ -35,7 +35,7 @@ func DeleteAccount(ctx *fiber.Ctx) error {
 		})
 	}
 
-	ok, err := repository.DeleteBankAccount(params.Id)
+	ok, err := repository.DeleteInvestment(params.Id)
 	if err != nil {
 		return ctx.Status(fiber.StatusBadGateway).JSON(common.BadRequest{
 			Message: err.Error(),
@@ -45,13 +45,13 @@ func DeleteAccount(ctx *fiber.Ctx) error {
 
 	if !ok {
 		return ctx.Status(fiber.StatusNotFound).JSON(common.BadRequest{
-			Message: "Conta bancária não encontrada",
+			Message: "Investimento não encontrado",
 			Success: false,
 		})
 	}
 
 	return ctx.Status(fiber.StatusOK).JSON(common.Response{
-		Message: "Conta bancária deletada com sucesso",
+		Message: "Investimento deletado com sucesso",
 		Success: true,
 		Data:    ok,
 	})
