# pkg/router/investment.go
@@ -9,5 +9,19 @@ import (
 // @Summary Rota para a entidade Investments
 // @Description Rota para a entidade Investments
 func InvestmentsRoutes(app fiber.Router) {
-	app.Get("/investments/get_types", handlers.GetInvestments)
+	app.Get(
+		"/investments/get_types",
+		handlers.GetTypesInvestments)
+	app.Get(
+		"/investments",
+		handlers.GetInvestments)
+	app.Post(
+		"/investments",
+		handlers.CreateInvestment)
+	app.Put(
+		"/investments/update/:id",
+		handlers.UpdateInvestment)
+	app.Delete(
+		"/investments/remove/:id",
+		handlers.DeleteInvestment)
 }
